# yadro_test_task1_DADPS

./: CMakeLists.txt  README.md
include/: common.hpp
src/: A_klient.cpp  B_klient.cpp  server.cpp
